<resources>
    <string name="app_name">Court Counter</string>
    <string name="btn_courtcounter_reset1">Reset</string>
    <string name="intro_courtcounter_title">FIBA basketball</string>
    <string name="intro_courtcounter_teama">Slovenia</string>
    <string name="intro_courtcounter_teamb">Serbia</string>
    <string name="btn_score_points1">Free throw</string>
    <string name="btn_score_points2">+2 Points</string>
    <string name="btn_score_points3">+3 Points</string>
    <string name="btn_score_rebounds1">Rebounds</string>
    <string name="txt_score_points0">0</string>
    <string name="txt_rebounds_points0">0</string>
    <string name="txt_tbl_title_points1">Points</string>
    <string name="txt_tbl_title_rebounds1">Rebounds</string>
    <string name="txt_tbl_title_assists1">Assists</string>
    <string name="txt_tbl_title_player1">Goran Dragic</string>
    <string name="txt_tbl_pt_player1">35</string>
    <string name="txt_tbl_rb_player1">7</string>
    <string name="txt_tbl_as_player1">3</string>
    <string name="txt_tbl_title_player2">Milan Macvan</string>
    <string name="txt_tbl_pt_player2">18</string>
    <string name="txt_tbl_rb_player2">5</string>
    <string name="txt_tbl_as_player2">3</string>
    <string name="txt_courtcounter_other1">&#160;</string>
</resources>
