<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3B0453"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#3B0453">

                <ImageView
                    android:id="@+id/fibaiconbasketballimgview"
                    android:layout_width="50dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="25dp"
                    android:layout_toLeftOf="@id/fibatitlebasketballtxtview"
                    android:src="@drawable/fibaiconbasketball" />

                <TextView
                    android:id="@+id/fibatitlebasketballtxtview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:paddingTop="13dp"
                    android:text="@string/intro_courtcounter_title"
                    android:textColor="#DBC068"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="68dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingTop="72dp"
                    android:text="@string/intro_courtcounter_teama"
                    android:textColor="#DBC068"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/txt_score_points0"
                    android:textColor="#F9A31B"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/team_a_rebounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/txt_rebounds_points0"
                    android:textColor="#EC425B"
                    android:textSize="19sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/btn_score_points3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/btn_score_points2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/btn_score_points1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addReboundsForTeamA"
                    android:text="@string/btn_score_rebounds1"
                    android:textColor="#EC425B" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"></View>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="68dp"
                android:background="@android:color/darker_gray"></View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingTop="72dp"
                    android:text="@string/intro_courtcounter_teamb"
                    android:textColor="#DBC068"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/txt_score_points0"
                    android:textColor="#F9A31B"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/team_b_rebounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/txt_rebounds_points0"
                    android:textColor="#EC425B"
                    android:textSize="19sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/btn_score_points3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/btn_score_points2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/btn_score_points1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addReboundsForTeamB"
                    android:text="@string/btn_score_rebounds1"
                    android:textColor="#EC425B" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"></View>
            </LinearLayout>


        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearLayout"
            android:background="#FFFFFF">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/txt_courtcounter_other1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_title_points1"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_title_rebounds1"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_title_assists1"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_title_player1"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_pt_player1"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_rb_player1"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_as_player1"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_title_player2"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_pt_player2"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_rb_player2"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/txt_tbl_as_player1"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </TableRow>

        </TableLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:onClick="resetScore"
            android:text="@string/btn_courtcounter_reset1" />

    </RelativeLayout>
</ScrollView>